# gsa_nlp_solver

./: .gitmodules  CMakeLists.txt  README.md
samples/: CMakeLists.txt  solve_decision_trees.cpp  solve_set.cpp
samples/python/: solve_constrained.py  solve_set.py
solver/: CMakeLists.txt
solver/include/: data_types.hpp  local_optimizer.hpp  solver.hpp
solver/src/: local_optimizer.cpp  solver.cpp
